# ipo-advisor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MASTER_BLUEPRINT_IPO_Listing_Advisor_Handoff.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
config/: default.yaml  sources.yaml
config/env/: dev.yaml  prod.yaml
data/backfill/: mainboard_ipos.csv  mainboard_ipos_2017.csv  nifty.csv  vix.csv
design/: BUILD_PLAN.md  DESIGN_HANDOFF.md
design/mockups/: dp3b-series-chart.html  index.html  v1-terminal.html  v2-institutional.html  v3-verdict-hero.html  v4-editorial.html  v5-control-room.html  v6-terminal-hero.html
docs/: B1_PROBE.md  B2_SCORE_GATE.md  B3_GATE.md  B6_RHP_PROBE.md  B7_BAKEOFF.md  B8_CONFORMAL.md  BENCHMARK.md  CALIBRATION.md  ENHANCEMENT_GATE.md  GATE7_PACKAGING.md  GMP_GATE.md  GMP_SCREEN.md  PROGRESS.md  PROJECT_LOG.md  REGIME_FIX.md  REGIME_RECHECK.md  REGIME_SKWORLD.md  REGIME_STRESS.md  SHIPPED_APP_GAPS.md  T3_STABILITY.md
docs/deep_dives/: 00_DeepDives_Index.md  01_DeepDive_Ingestion_and_IPO_Record.md  02_DeepDive_Feature_Construction.md  03_DeepDive_Scoring_Model.md  04_DeepDive_Calibration_and_Backtest.md  05_DeepDive_GMP_History.md  06_DeepDive_Service_and_Packaging.md  07_Phase7_App.md
docs/v2/: A3_ALLOTMENT_ODDS.md  B2_VIX_FLAG.md  B9_REGIME_TIERS.md  MASTER_BLUEPRINT_v2_Execution_and_Gate_Playbook.md  V2_PROGRESS.md
docs/v2/deep_dives/: A_DeepDive_The_Gate_Protocol.md  B_DeepDive_Collect_Forward_Data_and_Recorder.md  C_DeepDive_Scenario_Decision_Tree.md
docs/v3/: CONSOLE_AUDIT_2026-07-16.md  MASTER_BLUEPRINT_v3-DP.md  MASTER_BLUEPRINT_v3.md  V3-DP_PROGRESS.md  V3_PROGRESS.md
models/: calibrator.json  conformal.json  reliability.json
operations/: README.md
operations/systemd/: README.md  ipo-ingest.service  ipo-ingest.timer  ipo-telegram-alert@.service  ipo-vm-api.service
operations/systemd/ipo-ingest.service.d/: environment.conf  onfailure.conf
packaging/: build_app.py  build_engine.py  engine_entry.py  ipo-engine.spec  make_appx_assets.py  make_icon.py  screenshots.cjs
research/: CHECK1_FIELD_VERIFICATION.md  CHECK2_REGIME_T3_STABILITY.md  CHECK3_DEPLOYABILITY_VERDICT.md  README.md  TOTAL_ONLY_GATE.md  backfill_enhancement.py  check_upstox_release_cutover.py  chittorgarh_lot_crosscheck.json  compare_upstox_vs_nse.py  fetch_nse_fresh.py  fetch_upstox_details.py  fetch_upstox_drhp_check.py  fetch_upstox_ipos.py  fetch_upstox_registrar.py  gate_b3_deferred.py  nse_fresh_check.json  nse_fresh_post_launch.json  rhp_extract.py  rhp_probe.py  run_b1_probe.py  run_b2_gate.py  run_b3_gate.py  run_b7_bakeoff.py  run_enhancement_gate.py  run_total_only_gate.py  run_total_only_regime_check.py  total_only_variant.py  upstox_details_check.json  upstox_drhp_check.json  upstox_pull.json  upstox_registrar_check.json
scripts/: README.md  archive_drop.ps1  archive_pull.py  backfill_enhancement.py  check_scoring_path.py  fallback_selftest.py  fetch_vix.py  refresh_allotment.py  refresh_context.py  run_accuracy_monitor.py  run_backfill.py  run_benchmark.py  run_calibrate.py  run_conformal.py  run_daywise_recorder.py  run_enhancement_gate.py  run_gmp_gate.py  run_gmp_screen.py  run_heartbeat.py  run_ingest.py  run_live_ingest.py  run_recalibration_check.py  run_regime_fix.py  run_regime_recheck.py  run_regime_test.py  run_reliability_export.py  run_skworld_regime.py  run_t3_stability.py  run_vm_server.py  seed_demo_store.py  vm_alert_check.py  vm_archive_snapshot.py  vm_heartbeat.py  vm_keepalive.py  vm_telegram_bot.py  vm_telegram_digest.py
seed/: mainboard_ipos.csv
src/ipo/: __init__.py
src/ipo/archive/: __init__.py  merge.py  pull.py  store.py  validate.py
src/ipo/calibration/: __init__.py  backtest.py  benchmark.py  calibrate.py  conformal.py  dataset.py  gmp_gate.py  label.py  regime.py  reliability.py
src/ipo/core/: __init__.py  calendar.py  config.py  constants.py  interfaces.py  logging.py  secrets.py  types.py
src/ipo/features/: __init__.py  anchor.py  build.py  gmp.py  leakage.py  normalize.py  regime.py  subscription.py  valuation.py
src/ipo/model/: __init__.py  calibrator_placeholder.py  killflags.py  reason.py  scorer.py  verdict.py
src/ipo/series/: __init__.py  models.py  recorder.py  state.py  store.py
src/ipo/service/: allotment.py  allotment_context.py  api.py  calibration.py  engine.py  fallback_selftest.py  heartbeat.py  ipo_context.py  lifecycle.py  logs.py  monitoring.py  oracle_login.py  rhp.py  (+11 more)
tests/fixtures/: chittorgarh_recent_ipos.html  nse_active_category_sample.json  nse_bhavcopy_sample.csv  nse_current_issue_sample.json  nse_past_issues.json  nse_subscription_tatatech.json  nse_upcoming_sample.json  retail_allotment_ratios.json
tests/integration/: test_api.py  test_calibration_gate.py  test_conformal_wiring.py  test_data_plane.py  test_engine.py  test_features_pit.py  test_ingest_pipeline.py  test_layer3_calibrated.py  test_regime_tiers_wiring.py  test_regime_wiring.py  test_scheduler.py  test_scoring_demo.py  test_series_route.py  test_service_gate6.py  test_vix_flag_wiring.py  test_vm_series_route.py  test_vm_server.py
tests/unit/: test_allotment.py  test_allotment_context.py  test_archive.py  test_archive_snapshot.py  test_benchmark.py  test_calendar.py  test_calibration.py  test_chittorgarh.py  test_config.py  test_conformal.py  test_console_logs.py  test_csv_seed.py  test_daywise.py  test_fallback_selftest.py  test_features.py  test_fetch_vix.py  test_gmp_framework.py  test_heartbeat.py  test_hygiene.py  test_ingest_state.py  test_ipo_context.py  test_killflags.py  test_labels.py  test_leakage.py  test_lifecycle.py  test_live_ingest.py  test_logging_and_secrets.py  test_monitoring.py  test_new_ipo_context_trigger.py  test_normalize.py  test_notify.py  test_nse.py  test_oracle_login.py  test_polite_client.py  test_progress_log_integrity.py  test_protocols.py  test_reason.py  test_regime.py  test_regime_tiers.py  test_repository.py  (+19 more)
website/: contact.html  features.html  how-it-works.html  index.html  principles.html  privacy.html  styles.css  terms.html
(+101 files in other folders)
