[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipo-advisor"
version = "0.1.0"
description = "Calibrated, advisory-only IPO listing-gains advisor for Indian mainboard IPOs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "IPO Advisor Operator" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "tzdata>=2024.1",  # IANA tz database for zoneinfo (required on Windows)
    "pyarrow>=15.0",  # Parquet store (Layer 1 output contract)
    "requests>=2.31",  # polite HTTP client for live source adapters
    "beautifulsoup4>=4.12",  # HTML parsing for the Chittorgarh microdata adapter
    "numpy>=1.26",  # calibration math (reliability, Platt/isotonic, walk-forward)
    "fastapi>=0.110",  # advisory-only REST API (Phase 6, read-only endpoints)
    "uvicorn>=0.29",  # ASGI server for the service
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "pytest>=8.0",
    "types-PyYAML",
    "types-requests",
    "httpx>=0.27",  # FastAPI TestClient (exercises the API over real HTTP in tests)
    "pre-commit>=3.6",
]
packaging = [
    "pyinstaller>=6.10",  # freeze the engine into the sidecar binary the desktop app ships (GATE 7)
    "pillow>=10.0",  # generate the app icon (packaging/make_icon.py)
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling — single source of truth for lint / format / type-check / test.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative, high-signal rule set. D = docstrings (Ground Rule 5).
select = ["E", "F", "I", "UP", "B", "W", "D"]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]            # tests need not be docstring-complete
"scripts/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests", "scripts"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"
