[build-system]
requires = ["setuptools>=68,<90", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipo-advisor"
version = "0.1.0"
description = "Calibrated, advisory-only IPO listing-gains advisor for Indian mainboard IPOs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "IPO Advisor Operator" }]
dependencies = [
    # Every code dep carries an upper bound (next major) — an unbounded pin can silently break the
    # gate/behaviour on a major bump with no code change (see the Dev/CI note in operations/README).
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "pyyaml>=6.0,<7",
    "tzdata>=2024.1",  # UNCAPPED on purpose: a pure DATA package (IANA tz db) — you want the latest DST rules
    "pyarrow>=15.0,<25",  # Parquet store (Layer 1 output contract)
    "requests>=2.31,<3",  # polite HTTP client for live source adapters
    "beautifulsoup4>=4.12,<5",  # HTML parsing for the Chittorgarh microdata adapter
    "numpy>=1.26,<3",  # calibration math (reliability, Platt/isotonic, walk-forward)
    "fastapi>=0.110,<1",  # advisory-only REST API (Phase 6, read-only endpoints)
    "uvicorn>=0.29,<1",  # ASGI server for the service
]

[project.optional-dependencies]
dev = [
    # ALL dev-tool pins carry an upper bound (next major) — a formatter/linter/type-checker major
    # bump silently reddens the CI gate with zero code change (black 26.x, mypy 2.x both did).
    "ruff>=0.4,<1",
    "black>=24.0,<27",  # black reformats yearly (26.x did); cap the major
    "mypy>=1.9,<2",  # mypy 2.x tightened bare-generic checks; cap until the 2.x cutover is deliberate
    "pytest>=8.0,<10",
    "types-PyYAML",  # stub package, versionless — tracks pyyaml
    "types-requests",  # stub package, versionless — tracks requests
    "httpx>=0.27,<1.0",  # FastAPI TestClient; cap <1.0 until the starlette/httpx2 cutover is handled
    "pre-commit>=3.6,<5",
]
packaging = [
    "pyinstaller>=6.10,<7",  # freeze the engine into the sidecar binary the desktop app ships (GATE 7)
    "pillow>=10.0,<13",  # generate the app icon (packaging/make_icon.py)
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling — single source of truth for lint / format / type-check / test.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative, high-signal rule set. D = docstrings (Ground Rule 5).
select = ["E", "F", "I", "UP", "B", "W", "D"]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]            # tests need not be docstring-complete
"scripts/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests", "scripts"]
# Ignore JS/packaging build artifacts that live under src/ (electron-builder release/, the frozen
# engine's bundled site-packages, node_modules) — they are not our source. mypy, unlike ruff/black,
# does not honor .gitignore.
exclude = '(^|/)(release|dist|build|node_modules)/'
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    # starlette 1.x nudges TestClient toward "httpx2"; our usage is fine on httpx 0.28.
    # Benign forward-deprecation — silence it so the suite stays warning-clean (A4 housekeeping).
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
